v.3.5 Agregan funcionalidad de eliminar artista o album
Se le agregó la funcionalidad de poder eliminar un album o un artista a la vez. La documentación de la API acorde a estos dos nuevos endpoints en el swagger fue actualizada.
